<resources>
    <string name="app_name">Formulário</string>
    <string name="ma_et_nome">Nome</string>
    <string name="ma_et_idade">Idade</string>
    <string name="ma_tv_sexo">Sexo</string>
    <string name="ma_rd_masculino">Masculino</string>
    <string name="ma_rd_feminino">Feminino</string>
    <string name="ma_tv_prefs">Preferências</string>
    <string name="ma_ch_futebol">Futebol</string>
    <string name="ma_ch_volei" >Vôlei</string>
    <string name="ma_ch_basquete">Basquete</string>
    <string name="ma_ch_pingpong">Ping-Pong</string>
    <string name="ma_bt_ok">OK</string>
</resources>
